# picapture-1

./: CMakeLists.txt
src/: main.cpp  motion.avi  motion_detector.cpp
